--- a/po/R-class.pot
+++ b/po/R-class.pot
@@ -1,56 +1,119 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: class 7.3-22\n"
-"POT-Creation-Date: 2023-11-28 20:11\n"
+"Project-Id-Version: class 7.3-23\n"
+"POT-Creation-Date: 2025-06-27 23:29\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "wrong plot method used"
-msgstr ""
+
+#: R/SOM.R: 0
+#. R/SOM.R: stop("'SOM' called with no data")
 
 msgid "'SOM' called with no data"
 msgstr ""
 
-msgid "'radii' must be a list of the same length as 'alpha'"
-msgstr ""
+
+#: R/SOM.R: 0
+#. R/SOM.R: stop("'alpha' and 'radii' do not have the same lengths")
 
 msgid "'alpha' and 'radii' do not have the same lengths"
 msgstr ""
 
+
+#: R/SOM.R: 0
+#. R/SOM.R: stop("'alpha' and 'radii' do not match")
+
 msgid "'alpha' and 'radii' do not match"
 msgstr ""
 
-msgid "no missing values are allowed"
-msgstr ""
 
-msgid "'train' and 'class' have different lengths"
-msgstr ""
-
-msgid "dims of 'test' and 'train' differ"
-msgstr ""
-
-msgid "k = %d exceeds number %d of patterns"
-msgstr ""
-
-msgid "k = %d must be at least 1"
-msgstr ""
-
-msgid "'x' and 'cl' have different lengths"
-msgstr ""
-
-msgid "invalid 'prior'"
-msgstr ""
+#: R/lvq.R: 0
+#. R/lvq.R: stop("'prior' is of incorrect length")
 
 msgid "'prior' is of incorrect length"
 msgstr ""
 
+
+#: R/SOM.R: 0
+#. R/SOM.R: stop("'radii' must be a list of the same length as 'alpha'")
+
+msgid "'radii' must be a list of the same length as 'alpha'"
+msgstr ""
+
+
+#: R/knn.R: 0
+#. R/knn.R: stop("'train' and 'class' have different lengths")
+
+msgid "'train' and 'class' have different lengths"
+msgstr ""
+
+
+#: R/lvq.R: 0
+#. R/lvq.R: stop("'x' and 'cl' have different lengths")
+
+msgid "'x' and 'cl' have different lengths"
+msgstr ""
+
+
+#: R/knn.R: 0
+#. R/knn.R: stop("dims of 'test' and 'train' differ")
+
+msgid "dims of 'test' and 'train' differ"
+msgstr ""
+
+
+#: R/lvq.R: 0
+#. R/lvq.R: stop("invalid 'prior' argument")
+
+msgid "invalid 'prior' argument"
+msgstr ""
+
+
+#: R/knn.R: 0
+#. R/knn.R: gettextf("k = %d exceeds number %d of patterns", k, ntr)
+#. R/knn.R: gettextf("k = %d exceeds number %d of patterns", k, ntr - 1)
+
+msgid "k = %d exceeds number %d of patterns"
+msgstr ""
+
+
+#: R/knn.R: 0
+#. R/knn.R: gettextf("k = %d must be at least 1", k)
+
+msgid "k = %d must be at least 1"
+msgstr ""
+
+
+#: R/knn.R: 0
+#: R/lvq.R: 0
+#. R/knn.R: stop("no missing values are allowed")
+#. R/lvq.R: stop("no missing values are allowed")
+
+msgid "no missing values are allowed"
+msgstr ""
+
+
+#: R/multiedit.R: 0
+#. R/multiedit.R: gettextf("pass %s size %d", pass, n2)
+
+msgid "pass %s size %d"
+msgstr ""
+
+
+#: R/multiedit.R: 0
+#. R/multiedit.R: warning("retained set is now too small to proceed")
+
 msgid "retained set is now too small to proceed"
 msgstr ""
 
-msgid "pass %s size %d"
+
+#: R/SOM.R: 0
+#. R/SOM.R: stop("wrong plot method used")
+
+msgid "wrong plot method used"
 msgstr ""
